logo fix on iOS

--- a/global/_page.scss
+++ b/global/_page.scss
@@ -16,7 +16,7 @@
         @include mq('sm') {
             columns: 2;
         }
-        li.contents__listitem { }
+       // li.contents__listitem { }
 
 
     }
